# postgres-db-admin-operator

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  plan.md  postgres-dev-values.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
charts/postgres-db-admin-operator/: Chart.yaml  values.yaml
charts/postgres-db-admin-operator/templates/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml
deploy/: crd.yaml  example.yaml
scripts/: integration_test.py
src/postgres_db_admin_operator/: db.py  k8s.py  main.py
tests/: conftest.py  test_db.py  test_k8s.py  test_roles.py
