[project]
name = "postgres-db-admin-operator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels ten Boom", email = "nielstenboom@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kopf>=1.44.4",
    "psycopg>=3.3.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-docker>=3.2.5",
]
