[project]
name = "postgres-db-admin-operator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels ten Boom", email = "nielstenboom@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "kopf>=1.44.4",
    "psycopg>=3.3.3",
    "kubernetes>=35.0.0",
    "pydantic>=2.12.5",
]

[project.scripts]
postgres-db-admin-operator = "postgres_db_admin_operator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-docker>=3.2.5",
]
